--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Azimut Lab inc.</title>
   </head>
   <body>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-10 main-title">
-          <h1>Website</h1>
-          <h2>under construction</h2>
+          <h1>Un site web extraordinaire</h1>
+          <h2>est en préparation</h2>
         </div>
       </div>
       <div class="row align-items-center">
@@ -249,7 +249,7 @@
     </div>
       <footer class="footer">
         <div class="container text-center">
-          <span>your-website-name.com</span>
+          <span>azimutlab.ca / forked from <a href="https://github.com/tmKamal/under-construction-template">tmKamal</a></span>
         </div>
       </footer>
 
